--- a/localisation/LegacyOfRome.csv
+++ b/localisation/LegacyOfRome.csv
@@ -50,7 +50,7 @@ EVTDESCLoR.12;图拉真皇帝从帕提亚帝国手中征服了美索不达米亚
 EVTNAMELoR.13;加勒多尼亚行省;;;;;;;;;;x
 EVTDESCLoR.13;罗马帝国现在的边界已经超越了古代哈德良长城和安东尼长城的废墟，囊括了整个加勒多尼亚。这块冷漠和无情的土地是一些特殊人的家乡，但是他们将会转变为勤劳文明的罗马公民。;;;;;;;;;;x
 EVTNAMELoR.14;希伯尼亚行省;;;;;;;;;;x
-EVTDESCLoR.14;希伯尼亚岛是最新加入不断扩张的罗马帝国的领土. 旧帝国从未征服这片土地上漫漫起伏的群山和绿色的田野，但是如果不介意下雨或沿着海岸定居的恶臭的挪威移民，它应该能治理为一个令人舒适的采邑.;;;;;;;;;;x
+EVTDESCLoR.14;希伯尼亚岛是最新加入不断扩张的罗马帝国的领土。旧帝国从未征服这片土地上漫漫起伏的群山和绿色的田野，但是如果不介意下雨或沿着海岸定居的恶臭的挪威移民，它应该能治理为一个令人舒适的采邑。;;;;;;;;;;x
 restore_roman_empire;重建罗马帝国;;;;;;;;;;x
 restore_roman_empire_desc;如果旧帝国的罗马城和其他主要领地能得到恢复，那么拜占庭帝国将在西方世界的眼中被认可为真正的和合法的罗马的继承者..;;;;;;;;;;x
 EVTTOOLTIPLoR.20;罗马帝国重建了.;;;;;;;;;;x
@@ -247,7 +247,7 @@ EVTNAMELoR.869;信件;;;;;;;;;;x
 EVTDESCLoR.869;早晨有人发现大皇宫的门上钉着一封信.它好像是用血写成的，推测来源就是被钉在花园的那个死掉的守卫.信上写道:\n\n"你手上有我的一些东西，我手上同样也有你的.我提议做个交易.在信的背面你会发现有张地图通往一座爱琴海上的小岛.把我的德丝碧娜带来，我也会将液态火的配方和能制造它的那个死里逃生的炼金师带来.\n\n此致，\n雅量之人基里洛斯";;;;;;;;;;x
 EVTOPTALoR.869;很好的一次突袭机会...;;;;;;;;;;x
 EVTOPTBLoR.869;我不能冒险暗算他.;;;;;;;;;;x
-EVTDESCLoR.870;早晨有人发现大皇宫的门上钉着一封信.它好像是用血写成的，推测来源就是被钉在花园的那个死掉的守卫.信上写道:\n\n"玩够了，[Root.GetTitle].我手上有你想要的东西，而你必须认识到现在你的军队可留不住它.我提议做个交易.在信的背面你会发现有张地图通往一座爱琴海上的小岛.带一大笔黄金来，我也会将液态火的配方和能制造它的那个死里逃生的炼金师带来.\n\n署名，\n雅量之人基里洛斯";;;;;;;;;;x
+EVTDESCLoR.870;早晨有人发现大皇宫的门上钉着一封信.它好像是用血写成的，推测来源就是被钉在花园的那个死掉的守卫.信上写道:\n\n"玩够了，[Root.GetTitle].我手上有你想要的东西，而你必须认识到现在你的军队可留不住它.我提议做个交易.在信的背面你会发现有张地图通往一座爱琴海上的小岛.带一大笔黄金来，我也会将液态火的配方和能制造它的那个死里逃生的炼金师带来.\n\n 此致，\n 雅量之人基里洛斯";;;;;;;;;;x
 EVTTOOLTIPLoR.872;你准备伏击海盗王;;;;;;;;;;x
 EVTNAMELoR.872;交易;;;;;;;;;;x
 EVTDESCLoR.872;你派遣了一小支舰队向科瑞奥罗斯在信中指定的那座岛屿起航.当你接近那的时候，你命令当你靠近旗舰时其余船只分散到所有潜在的逃生路线上.海盗王已经等在这座荒凉的小岛上了.你带着德丝碧娜登陆，随身还有一支值得信任的北欧卫队小分队.科瑞奥罗斯站在那群强盗中间.\n\n"放了那女孩，"他喊道 "以我的荣誉保证，我会把炼金师和配方还给汝."一名虚弱的老人拿着一张卷轴被海盗们推上前来，同样你也把科瑞奥罗斯的女儿送上前."我对仓库和码头发生的事深表歉意，" 海盗王微笑着说 "我们不得不掩盖自己的踪迹." 交易完成，双方都分开到各自的船上去.;;;;;;;;;;x
