--- a/localisation/v2_10.csv
+++ b/localisation/v2_10.csv
@@ -718,7 +718,7 @@ EVTDESC_RoI_146;我的 [Root.GetLordLady], 士兵们不情愿追随你去印度,
 EVTOPTA_RoI_146;尽管如此,他们还是要追随我的.;;;;;;;;;;x
 EVTOPTB_RoI_146;前进! 他们在东方也会惧怕我们的!;;;;;;;;;;x
 hindu_ascetic;苦行者;;;;;;;;;;x
-buddhist_ascetic;苦行僧;;;;;;;;;;x
+buddhist_ascetic;苦行者;;;;;;;;;;x
 jain_naked_ascetic;裸体行走;;;;;;;;;;x
 realm_hindus_insulted;你王国里的印度教教徒被冒犯了;;;;;;;;;;x
 realm_buddhists_insulted;你王国利的佛教徒被冒犯了;;;;;;;;;;x
@@ -736,10 +736,10 @@ EVTOPTC_RoI_206;我不需要你那虚假的哲学. 卫兵,把他赶走!!;;;;;;;;
 EVTOPTA_RoI_207;你说服了我. 现在是佛陀时间...;;;;;;;;;;x
 EVTOPTB_RoI_207;你很睿智. 我会转信佛教.;;;;;;;;;;x
 EVTOPTC_RoI_207;又想了想,也许这并不适合我.;;;;;;;;;;x
-EVTDESC_RoI_209;一个裸体的耆那教信徒到达了你的宫廷,寻找听众. 在你的王座前坐下,他怒斥了你的生活方式,说你罪孽深重,并且告诉你如何通过耆那教的教义获得协调与纯洁.;;;;;;;;;;x
+EVTDESC_RoI_209;一个裸体的耆那教苦行者到达了你的宫廷,寻找听众. 在你的王座前坐下,他怒斥了你的生活方式,说你罪孽深重,并且告诉你如何通过耆那教的教义获得协调与纯洁.;;;;;;;;;;x
 EVTOPTB_RoI_209;先穿上衣服!;;;;;;;;;;x
 EVTOPTC_RoI_209;说我罪孽深重?作死? 卫兵, 把他拉出去砍了!;;;;;;;;;;x
-EVTDESC_RoI_210;那个裸体的耆那教信徒继续谈到了禁欲主义和瑜伽以及如何通过自律和调节追求灵魂上的纯洁.;;;;;;;;;;x
+EVTDESC_RoI_210;那个裸体的耆那教苦行者继续谈到了禁欲主义和瑜伽以及如何通过自律和调节追求灵魂上的纯洁.;;;;;;;;;;x
 EVTOPTA_RoI_210;你说服了我,我也要开始裸体行走!;;;;;;;;;;x
 EVTOPTB_RoI_210;你很睿智. 我会转信耆那教.;;;;;;;;;;x
 EVTOPTC_RoI_210;又想了想,也许这并不适合我.;;;;;;;;;;x
