--- a/localisation/v2_20.csv
+++ b/localisation/v2_20.csv
@@ -42,7 +42,7 @@ EVTNAME107003;教学战役;;;;;;;;;;x
 EVTDESC107003;在教学战役中，您会收到类似这枚信息的提示以助于您了解后续如何游玩。您仍可选择自由探索游戏。当您觉得无事可做时，上方的提示有助于您决定如何继续游戏。;;;;;;;;;;x
 EVTOPTA107003;了解！;;;;;;;;;;x
 EVTNAME107004;教学战役;;;;;;;;;;x
-EVTDESC107004;根据您的实时操作，游戏里有多个地图模式满足您的需要。默认模式是地形。 另一个有用的地图模式是：展现不同独立国度间国界的自由国度模式。请您尝试探索一下右下角的各个地图模式的作用。;;;;;;;;;;x
+EVTDESC107004;根据您的实时操作，游戏里有多个地图模式满足您的需要。默认模式是地形。 另一个有用的地图模式是：展现不同独立领土间国界的独立领主模式。请您尝试探索一下右下角的各个地图模式的作用。;;;;;;;;;;x
 EVTOPTA107004;了解！;;;;;;;;;;x
 EVTNAME107005;教学战役;;;;;;;;;;x
 EVTDESC107005;左上角的角色就是您。点击头像可获得更多关于[Root.GetTitledFirstName]和他家人的信息。您也可以点击头像旁的徽记来了解您的国度。\n\n点击头像以查看您的统治者以及他的家人。注意，您现在是单身而继承人是您的弟弟，卡斯提尔国王。如果您现在就去世，则可以扮演身为同一家族的他继续游戏。当然这意味着他会获得列昂王国，一君治二国……;;;;;;;;;;x
@@ -62,7 +62,7 @@ EVTOPTA107009;了解！;;;;;;;;;;x
 EVTNAME107100;教学战役;;;;;;;;;;x
 EVTOPTA107100;了解！;;;;;;;;;;x
 EVTNAME107101;教学战役;;;;;;;;;;x
-EVTDESC107101;你的国度由许多伯爵领组成(地图上的省份). 每个伯爵领由至少有一个领地(城堡,城市,教堂等). 由你本人直接占有的土地叫直辖领地. 可惜的是, 能拥有的直辖领地有一个上限. 这个数值显示在右上角. 如果你超出了直辖上限,你会收到严重的惩罚..;;;;;;;;;;x
+EVTDESC107101;你的国度由许多伯爵领组成（地图上的省份）。每个伯爵领由至少有一个领地（城堡、城市或教堂）。由你本人直接占有的土地叫直辖领地。可惜的是，能拥有的直辖领地有一个上限。这个数值显示在右上角。如果你超出了直辖上限，你会收到严重的惩罚……;;;;;;;;;;x
 EVTOPTA107101;了解！;;;;;;;;;;x
 EVTNAME107102;教学战役;;;;;;;;;;x
 EVTDESC107102;封臣存在的意义就是解决直辖上限带来的问题！你可以通过封臣控制超出你直辖上限的领土。你的封臣同时会提供一部分税收和兵员给你。这也就是为什么你更加应当拥有少数精悍的封臣。封臣同时也能有封臣，如此下去。最底层的封臣(比伯爵低，角色头像包着一圈铜环)不计入封臣上限。;;;;;;;;;;x
@@ -979,9 +979,9 @@ EVTDESC_CM_6336;新消息,已经成功刺杀[From.GetTitledName]. [From.GetTitle
 EVTOPTA_CM_6336;好吧.;;;;;;;;;;x
 EVTDESC_CM_6337;你正躺在你的隐居藏匿地酣畅大睡,做着重回以往自由快乐时光的梦.突然你感觉某种东西湿湿滑滑地转进你的被毯里.你猛然警醒,发觉事情不妙.你迅速的一手往被毯里一抓,抓到一条冰冷且长满鳞片的生物并拼命地扭动着.你小心地点亮灯光，终于看见你手里抓着的是一条小蛇.你能看见蛇的尖牙冒着毒液,向你张开着.你很清楚这条蛇绝不是偶然出现在这.感谢[Root.Religion.RandomGodName]让你死里逃生.;;;;;;;;;;x
 EVTOPTA_CM_6337;我会查出背后是谁在指使!;;;;;;;;;;x
-EVTDESC_CM_6338;似乎用耍蛇的来刺杀[From.GetTitledName],计划彻底失败了. 然而,他们还并没有发现是谁在指使的.;;;;;;;;;;x
+EVTDESC_CM_6338;似乎用耍蛇人来刺杀[From.GetTitledName]的计划失败了. 然而，他们还并没有发现是谁指使他的。;;;;;;;;;;x
 EVTOPTA_CM_6338;下一次让[From.GetHerHim]好看.;;;;;;;;;;x
-EVTDESC_CM_63399;似乎用耍蛇的来刺杀[From.GetTitledName],计划彻底失败了.更糟的是,耍蛇人被抓住了还供出是谁指使他的.;;;;;;;;;;x
+EVTDESC_CM_63399;似乎用耍蛇人来刺杀[From.GetTitledName]的计划失败了。更糟的是,耍蛇人被抓住了还供出是谁指使他的。;;;;;;;;;;x
 EVTOPTA_CM_63399;该死!;;;;;;;;;;x
 EVTDESC_CM_6340;我的[Root.GetLordLady], 有一个除掉[Root.PlotTarget.GetTitledName]的机会出现了.我们找到了那人的一位怀有异心的贴身侍女,侍女说她要让[Root.PlotTarget.GetLordLady]付出代价. 我们应该干这一票吗,我的[Root.GetLordLady]?;;;;;;;;;;x
 EVTOPTA_CM_6340;付给她钱才下手杀[Root.PlotTarget.GetTitledFirstName].;;;;;;;;;;x
