--- a/localisation/v2_40.csv
+++ b/localisation/v2_40.csv
@@ -7,7 +7,7 @@ theocracy_government;神权制;;;;;;;;;;x
 muslim_government;伊克塔制;;;;;;;;;;x
 tribal_government;部落制;;;;;;;;;;x
 RETCAP_FROM_GOVERNMENT;由于政体：$AMOUNT$\n;;;;;;;;;;x
-GOVERNMENT_CANNOT_CREATE_KINGDOMS;神权国、骑士团和雇佣兵团无法成立王国！;;;;;;;;;;x
+GOVERNMENT_CANNOT_CREATE_KINGDOMS;神权国、圣战士和雇佣兵团无法成立王国！;;;;;;;;;;x
 GOVERNMENT_CANNOT_USURP_KINGDOMS_AND_EMPIRES;商业共和国和贵人无法篡夺王国或者帝国头衔;;;;;;;;;;x
 GAME_STATE_WAS_CORRUPTED;游戏状态已损坏。请重启游戏。;;;;;;;;;;x
 TRIBAL_TAX;部落税;;;;;;;;;;x
@@ -487,8 +487,8 @@ yagma;样磨人;;;;;;;;;;x
 chigil;处月人;;;;;;;;;;x
 khitan;契丹人;;;;;;;;;;x
 sogdian;粟特人;;;;;;;;;;x
-nomad_succession;游牧继承;;;;;;;;;;x
-succ_nomadic;游牧继承;;;;;;;;;;x
+nomad_succession;游牧继承法;;;;;;;;;;x
+succ_nomadic;游牧继承法;;;;;;;;;;x
 TITLE_NEW_PRIMARY_IS_NOMADIC;§R游牧部落不能设置主头衔！§!;;;;;;;;;;x
 CALL_ALL_TRIBAL_CONTROL;不能动员部落或游牧封臣，他们只向我们提供领主征召兵;;;;;;;;;;x
 CALL_ALL_NOT_TRIBAL;不能动员部落封臣，因为你不是部落;;;;;;;;;;x
