--- a/localisation/v2_51.csv
+++ b/localisation/v2_51.csv
@@ -2,7 +2,7 @@
 TOOLTIP_DISALLOW_TRUE_COGNATIC;不允许男女平等继承法\n;;;;;;;;;;x
 TOOLTIP_ALLOW_TRUE_COGNATIC;允许男女平等继承法\n;;;;;;;;;;x
 opinion_powerful_vassal_not_voter;想要成为内阁成员;;;;;;;;;;x
-REQUEST_SUPPORT_INTERACTION_TITLE;需要内阁支持;;;;;;;;;;x
+REQUEST_SUPPORT_INTERACTION_TITLE;要求内阁支持;;;;;;;;;;x
 ASK_TO_DECLARE_WAR_INTERACTION_TITLE;要求宣称;;;;;;;;;;x
 change_council_job_desc;如果你觉得§Y[Root.GetTitledName]§!更胜任另一份内阁的工作，你可以把[Root.GetHerHis]现今工作与另一个人交换。;;;;;;;;;;x
 IS_AFFECTED_BY_AN_ACTIVE_REALM_PEACE;处于境内和平的影响;;;;;;;;;;x
